--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,12 +1,22 @@
 .app-header {
   ul {
     list-style: none;
-    display: inline-flex;
-    a {
-      font-size: 24px;
+    li {
       text-align: center;
-      text-justify: center;
-      text-decoration: none;
+      padding: 12px;
+      a {
+        font-size: 18px;
+        padding: 12px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+        text-justify: center;
+        text-decoration: none;
+        color: black;
+        text-transform: uppercase;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
