Add Footer style, Home page style. Add Carousel to first home element

--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -1,4 +1,11 @@
 .app-header {
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+.app-nav-header {
   ul {
     list-style: none;
     li {
